--- a/public/html/add.html
+++ b/public/html/add.html
@@ -71,5 +71,21 @@
                                 <div class="control">
                                     <input class="input" type="text" placeholder="Text input">
                                 </div>
+                                <br>
+                                <div class="field is-grouped">
+                                    <div class="control">
+                                      <button class="button is-link">Submit</button>
+                                    </div>
+                                </div>
                             </div>
     </section>
+
+<footer class="footer is-paddingless has-background-link has-text-white-ter is-mobile" id="foot-pad">
+    <div class="content has-text-centered">
+        <p>&copy; 2020</p>
+    </div>
+</footer>
+<script src="../js/script.js"></script>
+</body>
+
+</html>
