--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
-    <link rel="stylesheet" href="./assets/css/bulma.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="../css/bulma.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Brad Davis, a web developer?</title>
 </head>
@@ -36,7 +36,7 @@
                         <a class="navbar-item has-background-link has-text-white-ter" href="#contact">
                             Contact
                         </a>
-                        <a class="navbar-item has-background-link has-text-white-ter" href="./assets/Brad_Davis_April_2020.pdf" target="_new">
+                        <a class="navbar-item has-background-link has-text-white-ter" href="./resume" target="_new">
                             Resume
                         </a>
                     </div>
@@ -71,8 +71,6 @@
                             <div id="prob"></div>
                             <br />
                             <div id="tech"></div>
-                            <p class="subtitle has-text-link is-italic"id="subTitle">Technologies</p>
-                            <p>&bull; HTML, CSS, JavaScript, jQuery, Node.js</p>
                         </div>
                         <br/>
                         <br/>
@@ -87,9 +85,25 @@
                         <div class="tile is-child box has-text-link has-background-white-ter" id="projects">
                             <p class="title has-text-link">Projects</p>
                             <div class="box">
+                                <a class="subtitle has-text-info" href="https://ucb-batman.herokuapp.com/" target="_new">B.A.T.M.a.N.</a>
+                                <hr/>
+                                <img src="../images/batman_readme.gif" alt="Gif of B.A.T.M.a.N.">
+                                <p class="has-text-link">BATMaN is a community hub and toolset for outdoor enthusiasts to discover new communities and new adventures in the Bay Area and beyond.  Pick a trail, build a community, get outside!</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/ucb-batman" target="_new"> - Github Repo</a>
+                                <p class="has-text-link">May 2020</p>
+                            </div>
+                            <div class="box">
+                                <a class="subtitle has-text-info" href="https://ucb-batman.herokuapp.com/" target="_new">B.A.T.M.a.N.</a>
+                                <hr/>
+                                <img src="../images/batman_readme.gif" alt="Gif of B.A.T.M.a.N.">
+                                <p class="has-text-link">BATMaN is a community hub and toolset for outdoor enthusiasts to discover new communities and new adventures in the Bay Area and beyond.  Pick a trail, build a community, get outside!</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/ucb-batman" target="_new"> - Github Repo</a>
+                                <p class="has-text-link">May 2020</p>
+                            </div>
+                            <div class="box">
                                 <a class="subtitle has-text-info" href="https://davisbradleyj.github.io/covid19-tracker/" target="_new">Covid-19 Tracker</a>
                                 <hr/>
-                                <img src="./assets/images/Covid19Tracker.gif" alt="Gif of Covid-19 Tracker">
+                                <img src="../images/Covid19Tracker.gif" alt="Gif of Covid-19 Tracker">
                                 <p class="has-text-link">Keep up to date on current news, and the latest statistics while you should be Sheltered in Place.  Stay safe out there friends.</p>
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/covid19-tracker" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">April 2020</p>
@@ -97,7 +111,7 @@
                             <div class="box">
                                 <a class="subtitle has-text-info" href="https://davisbradleyj.github.io/weather_dashboard/">Weather Dashboard</a>
                                 <hr/>
-                                <img src="./assets/images/weatherdashboard.gif" alt="Gif of Weather Dashboard">
+                                <img src="../images/weatherdashboard.gif" alt="Gif of Weather Dashboard">
                                 <p class="has-text-link">A quick forecast and weather outlook dashboard, where you can add favorite cities.  And see if you should bring an umbrella or put on sunscreen before heading out.</p>
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/weather_dashboard" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">March 2020</p>
@@ -105,7 +119,7 @@
                             <div class="box">
                                 <a class="subtitle has-text-info" href="https://davisbradleyj.github.io/day_planner/">Day Planner</a>
                                 <hr/>
-                                <img src="./assets/images/Dayplanner.gif" alt="Gif of Day Planner">
+                                <img src="../images/Dayplanner.gif" alt="Gif of Day Planner">
                                 <p class="has-text-link">Keep track of your workday, in hourly increments. Current hourblock is highlighted in red, future timeblocks are green.</p>
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/day_planner" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">March 2020</p>
@@ -145,6 +159,7 @@
             <p>&copy; 2020</p>
         </div>
     </footer>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
