fix routes to get skills to page, add taqueria gif

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -93,11 +93,11 @@
                                 <p class="has-text-link">May 2020</p>
                             </div>
                             <div class="box">
-                                <a class="subtitle has-text-info" href="https://ucb-batman.herokuapp.com/" target="_new">B.A.T.M.a.N.</a>
+                                <a class="subtitle has-text-info" href="https://gen-villa-taqueria.herokuapp.com/" target="_new">Taqueria</a>
                                 <hr/>
-                                <img src="../images/batman_readme.gif" alt="Gif of B.A.T.M.a.N.">
-                                <p class="has-text-link">BATMaN is a community hub and toolset for outdoor enthusiasts to discover new communities and new adventures in the Bay Area and beyond.  Pick a trail, build a community, get outside!</p>
-                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/ucb-batman" target="_new"> - Github Repo</a>
+                                <img src="../images/Gen-Villa-Taqueria.gif" alt="Gif of Taqueria app">
+                                <p class="has-text-link">Create a menu for a taqueria!</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/taqueria" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">April 2020</p>
                             </div>
                             <div class="box">
@@ -159,6 +159,7 @@
             <p>&copy; 2020</p>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
 </body>
 
