--- a/public/html/add.html
+++ b/public/html/add.html
@@ -85,6 +85,7 @@
         <p>&copy; 2020</p>
     </div>
 </footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="../js/script.js"></script>
 </body>
 
