modify spacing of Skills

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/bulma.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Brad Davis, a web developer?</title>
+    <title>Brad Davis, Full Stack Web Developer</title>
 </head>
 
 <body>
@@ -51,7 +51,7 @@
                     Brad Davis
                 </h1>
                 <h2 class="subtitle is-italic">
-                    A web developer?
+                    Full Stack Web Developer
                 </h2>
             </div>
         </div>
@@ -65,11 +65,8 @@
                         <div class="tile is-child box has-text-link has-background-white-ter" id="skills">
                             <h2 class="title has-text-link" id="skillTitle">Skills</h2>
                             <div id="comm"></div>
-                            <br />
                             <div id="collab"></div>
-                            <br />
                             <div id="prob"></div>
-                            <br />
                             <div id="tech"></div>
                         </div>
                         <br/>
