add click game, google search, and StudyBuddy to projects

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -82,20 +82,36 @@
                         <div class="tile is-child box has-text-link has-background-white-ter" id="projects">
                             <p class="title has-text-link">Projects</p>
                             <div class="box">
+                                <a class="subtitle has-text-info" href="https://safe-peak-24611.herokuapp.com/" target="_new">StudyBuddy</a>
+                                <hr/>
+                                <img src="../images/StudyBuddy_Functionality.gif" alt="Gif of StudyBuddy">
+                                <p class="has-text-link">This application allows collegiate or graduate level students to interact within their own class/cohort to better schedule and host group study sessions. For a test login, please see the Tests section of the the application Readme.</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/P3-Study-Buddy" target="_new"> - Github Repo</a>
+                                <p class="has-text-link">June 2020</p>
+                            </div>
+                            <div class="box">
+                                <a class="subtitle has-text-info" href="https://bd-google-books.herokuapp.com/" target="_new">Google Book Search</a>
+                                <hr/>
+                                <img src="../images/google-search.gif" alt="Gif of Google-Books">
+                                <p class="has-text-link">A MERN application where Google-Books is searched by a user to grab favorites and store them into a Mongo database.</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/google-books" target="_new"> - Github Repo</a>
+                                <p class="has-text-link">May 2020</p>
+                            </div>
+                            <div class="box">
+                                <a class="subtitle has-text-info" href="https://bd-meme-game.herokuapp.com/" target="_new">What Do You Meme?</a>
+                                <hr/>
+                                <img src="../images/click-game.gif" alt="Gif of Meme Click Game">
+                                <p class="has-text-link">Utilizing React, this is a memory game has its UI broken out into components, and incorporates component state management, and responds to user events (each clicked image).</p>
+                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/Click-Game" target="_new"> - Github Repo</a>
+                                <p class="has-text-link">May 2020</p>
+                            </div>
+                            <div class="box">
                                 <a class="subtitle has-text-info" href="https://ucb-batman.herokuapp.com/" target="_new">B.A.T.M.a.N.</a>
                                 <hr/>
                                 <img src="../images/batman_readme.gif" alt="Gif of B.A.T.M.a.N.">
                                 <p class="has-text-link">BATMaN is a community hub and toolset for outdoor enthusiasts to discover new communities and new adventures in the Bay Area and beyond.  Pick a trail, build a community, get outside!</p>
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/ucb-batman" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">May 2020</p>
-                            </div>
-                            <div class="box">
-                                <a class="subtitle has-text-info" href="https://gen-villa-taqueria.herokuapp.com/" target="_new">Taqueria</a>
-                                <hr/>
-                                <img src="../images/Gen-Villa-Taqueria.gif" alt="Gif of Taqueria app">
-                                <p class="has-text-link">Create a menu for a taqueria!</p>
-                                <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/taqueria" target="_new"> - Github Repo</a>
-                                <p class="has-text-link">April 2020</p>
                             </div>
                             <div class="box">
                                 <a class="subtitle has-text-info" href="https://davisbradleyj.github.io/covid19-tracker/" target="_new">Covid-19 Tracker</a>
