modify index for typed out web addresses

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -150,13 +150,13 @@
                         <br/>                        
                         <div class="tile is-child box has-background-white-ter has-text-link" id="contact">
                             <p class="title has-text-link">Contact</p>
-                            <a class="fa fa-google" style="font-size:20px" href="mailto:davis.bradleyj@gmail.com" target="_new"> Gmail </a>
+                            <a class="fa fa-google" style="font-size:20px" href="mailto:davis.bradleyj@gmail.com" target="_new"> Gmail - davis.bradleyj@gmail.com </a>
                             <br>
-                            <a class="fa fa-linkedin" style="font-size:20px" href="https://www.linkedin.com/in/brad-davis-7885884/" target="_new"> LinkedIn </a>
+                            <a class="fa fa-linkedin" style="font-size:20px" href="https://www.linkedin.com/in/davis-bradleyj/" target="_new"> LinkedIn - www.linkedin.com/in/davis-bradleyj </a>
                             <br>
-                            <a class="fa fa-github" style="font-size:20px" href="https://github.com/davisbradleyj/" target="_new"> Github </a>
+                            <a class="fa fa-github" style="font-size:20px" href="https://github.com/davisbradleyj/" target="_new"> Github - https://github.com/davisbradleyj/ </a>
                             <br>
-                            <a class="fa fa-medium" style="font-size:20px" href="https://medium.com/@davis.bradleyj" target="_new"> Medium</a>
+                            <a class="fa fa-medium" style="font-size:20px" href="https://medium.com/@davis.bradleyj" target="_new"> Medium - https://medium.com/@davis.bradleyj </a>
                         </div>
                         <br/>
                         <br/>
