add button to scroll to top of page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
     <section class="hero-head is-mobile">
         <nav class="navbar is-link">
             <div class="container">
@@ -172,8 +173,10 @@
             <p>&copy; 2020</p>
         </div>
     </footer>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
+
 </body>
 
 </html>
