update links to revised web addresses

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -115,7 +115,7 @@
                                 <p class="has-text-link">May 2020</p>
                             </div>
                             <div class="box">
-                                <a class="subtitle has-text-info" href="https://davisbradleyj.github.io/covid19-tracker/" target="_new">Covid-19 Tracker</a>
+                                <a class="subtitle has-text-info" href="https://http://bd-covid19-tracker.herokuapp.com/" target="_new">Covid-19 Tracker</a>
                                 <hr/>
                                 <img src="../images/Covid19Tracker.gif" alt="Gif of Covid-19 Tracker">
                                 <p class="has-text-link">Keep up to date on current news, and the latest statistics while you should be Sheltered in Place.  Stay safe out there friends.</p>
