Comment out Google Books search app until MongoDB issues are resolved

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -80,14 +80,14 @@
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/P3-Study-Buddy" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">June 2020</p>
                             </div>
-                            <div class="box">
+                            <!-- <div class="box">
                                 <a class="subtitle has-text-info" href="https://bd-google-books.herokuapp.com/" target="_new">Google Book Search</a>
                                 <hr/>
                                 <img src="../images/google-search.gif" alt="Gif of Google-Books">
                                 <p class="has-text-link">A MERN application where Google-Books is searched by a user to grab favorites and store them into a Mongo database.</p>
                                 <a class="fa fa-github" style="font-size:18px" href="https://github.com/davisbradleyj/google-books" target="_new"> - Github Repo</a>
                                 <p class="has-text-link">May 2020</p>
-                            </div>
+                            </div> -->
                             <div class="box">
                                 <a class="subtitle has-text-info" href="https://bd-meme-game.herokuapp.com/" target="_new">What Do You Meme?</a>
                                 <hr/>
